--- a/src/pages/login/_login.scss
+++ b/src/pages/login/_login.scss
@@ -1,30 +1,116 @@
 .container {
     margin: auto;
+    display: flex;
+    flex-direction: column;
     align-items: center;
-    width: 85%;
-    padding: 20px;
 }
 
 
 .logo {
-    margin-top: 40px;
-    width: 160px;
-    height: 160px;
-}
-
-.title {
-    font-size: 30px;
-    color: #3F414E;
-    margin-top: 16px;
-    font-family: 'RobotoSlab-Bold';
-}
-
-.subTitle {
-    font-size: 24px;
-    color: #3F414E;
-    margin-top: 36px;
-    margin-bottom: 20px;
-    align-items: center;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding-top: 40px;
+    justify-content: flex-end;
+    margin-bottom: 8px;
     text-align: center;
-    font-family: 'RobotoSlab-Regular';
+    background-color: #40B29D;
+    border-bottom: 1px solid #2e8977;
+    height: 30vh;
+
+    img {
+        width: 80px;
+        height: 80px;
+        margin: 0 auto;
+    }
+
+    .title {
+        font-size: 30px;
+        color: white;
+        font-weight: 500;
+        margin: 12px 0 8px 0;
+    }
+}
+
+
+
+.error {
+    color: red;
+    font-size: 14px;
+    margin-top: 10px;
+    text-align: center;
+}
+
+.form__login {
+    display: flex;
+    flex-direction: column;
+    max-width: 420px;
+    width: 100%;
+    height: 60%;
+}
+
+.button {
+
+    &__container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin-top: 20px;
+        width: 100%;
+    }
+
+    &__forgot {
+        text-decoration: 'none';
+        text-align: left;
+        color: 'inherit';
+        background: none;
+        border: none;
+        margin-bottom: 8px;
+        cursor: pointer;
+    }
+
+    &__login {
+        width: 100%;
+        height: 50px;
+        font-size: 1em;
+        background-color: #314c5e;
+        border: 1px solid #314c5e;
+        color: white;
+        cursor: pointer;
+        border-radius: 4px;
+        line-height: normal;
+
+        &:hover {
+            background-color: #3F414E;
+            border: 1px solid #3F414E;
+        }
+
+        span {
+            padding-left: 8px;
+        }
+    }
+}
+
+.input__flex {
+    display: flex;
+}
+
+.loader {
+    display: inline-block;
+    border: 4px solid transparent;
+    border-top-color: white;
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
 }
